--- a/src/partials/bride-slider.html
+++ b/src/partials/bride-slider.html
@@ -31,7 +31,7 @@
       <div class="row medium-up-3">
         <div class="column">
           <div class="slider-item">
-            <img src="{{root}}assets/img/party-4.jpg" alt="">
+            <img src="{{root}}assets/img/party-alison.jpg" alt="">
             <h4 class="slider-name">Alison Wuerstle</h4>
             <h4 class="slider-role">Bridesmaid</h4>
           </div>
@@ -56,14 +56,14 @@
       <div class="row medium-up-3 align-center">
         <div class="column">
           <div class="slider-item">
-            <img src="{{root}}assets/img/party-7.jpg" alt="">
+            <img src="{{root}}assets/img/party-randolph.jpg" alt="">
             <h4 class="slider-name">Randolph Cabrera</h4>
             <h4 class="slider-role">Bridesman</h4>
           </div>
         </div>
         <div class="column">
           <div class="slider-item">
-            <img src="https://unsplash.it/100" alt="">
+            <img src="{{root}}assets/img/party-john.jpg" alt="">
             <h4 class="slider-name">John Sy</h4>
             <h4 class="slider-role">Bridesman</h4>
           </div>
@@ -105,35 +105,35 @@
     </li>
     <li class="orbit-slide">
       <div class="slider-item">
-        <img src="{{root}}assets/img/party-4.jpg" alt="">
+        <img src="{{root}}assets/img/party-alison.jpg" alt="">
         <h4 class="slider-name">Alison Wuerstle</h4>
         <h4 class="slider-role">Bridesmaid</h4>
       </div>
     </li>
     <li class="orbit-slide">
       <div class="slider-item">
-        <img src="{{root}}assets/img/party-5.jpg" alt="">
+        <img src="{{root}}assets/img/party-nea.jpg" alt="">
         <h4 class="slider-name">Nea Ignacio</h4>
         <h4 class="slider-role">Bridesmaid</h4>
       </div>
     </li>
     <li class="orbit-slide">
       <div class="slider-item">
-        <img src="{{root}}assets/img/party-6.jpg" alt="">
+        <img src="{{root}}assets/img/party-amanda.jpg" alt="">
         <h4 class="slider-name">Amanda Santos</h4>
         <h4 class="slider-role">Bridesmaid</h4>
       </div>
     </li>
     <li class="orbit-slide">
       <div class="slider-item">
-        <img src="{{root}}assets/img/party-7.jpg" alt="">
+        <img src="{{root}}assets/img/party-randolph.jpg" alt="">
         <h4 class="slider-name">Randolph Cabrera</h4>
         <h4 class="slider-role">Bridesman</h4>
       </div>
     </li>
     <li class="orbit-slide">
       <div class="slider-item">
-        <img src="{{root}}assets/img/party-6.jpg" alt="">
+        <img src="{{root}}assets/img/party-john.jpg" alt="">
         <h4 class="slider-name">John Sy</h4>
         <h4 class="slider-role">Bridesman</h4>
       </div>
