--- a/src/partials/groom-slider.html
+++ b/src/partials/groom-slider.html
@@ -13,14 +13,14 @@
         </div>
         <div class="column">
           <div class="slider-item">
-            <img src="{{root}}assets/img/party-sharoleen.jpg" alt="">
+            <img src="{{root}}assets/img/party-neiman.jpg" alt="">
             <h4 class="slider-name">Neiman Chen</h4>
             <h4 class="slider-role">Groomsman</h4>
           </div>
         </div>
         <div class="column">
           <div class="slider-item">
-            <img src="{{root}}assets/img/party-sharoleen.jpg" alt="">
+            <img src="{{root}}assets/img/party-wesley.jpg" alt="">
             <h4 class="slider-name">Wesley Yabut</h4>
             <h4 class="slider-role">Groomsman</h4>
           </div>
@@ -31,7 +31,7 @@
       <div class="row medium-up-3 align-center">
         <div class="column">
           <div class="slider-item">
-            <img src="{{root}}assets/img/party-sharoleen.jpg" alt="">
+            <img src="{{root}}assets/img/party-lina.jpg" alt="">
             <h4 class="slider-name">Lina Chea</h4>
             <h4 class="slider-role">Groomsmaid</h4>
           </div>
@@ -65,21 +65,21 @@
     </li>
     <li class="orbit-slide">
       <div class="slider-item">
-        <img src="{{root}}assets/img/party-sharoleen.jpg" alt="">
+        <img src="{{root}}assets/img/party-neiman.jpg" alt="">
         <h4 class="slider-name">Neiman Chen</h4>
         <h4 class="slider-role">Groomsman</h4>
       </div>
     </li>
     <li class="orbit-slide">
       <div class="slider-item">
-        <img src="{{root}}assets/img/party-sharoleen.jpg" alt="">
+        <img src="{{root}}assets/img/party-wesley.jpg" alt="">
         <h4 class="slider-name">Wesley Yabut</h4>
         <h4 class="slider-role">Groomsman</h4>
       </div>
     </li>
     <li class="orbit-slide">
       <div class="slider-item">
-        <img src="{{root}}assets/img/party-sharoleen.jpg" alt="">
+        <img src="{{root}}assets/img/party-lina.jpg" alt="">
         <h4 class="slider-name">Lina Chea</h4>
         <h4 class="slider-role">Groomsmaid</h4>
       </div>
