--- a/src/partials/instructions.html
+++ b/src/partials/instructions.html
@@ -31,7 +31,7 @@
           <h5>Room Type</h5>
           <p>Depending on what type of room you select, the Cruise Vacation Planner will assist in selecting your room so that you are close to the rest of the wedding guests.</p>
           <p>The options are Interior, Ocean View, Balcony, Mini-Suite, and Suite.</p>
-          <a href="#">See pricing & room details >></a>
+          <a href="http://www.princess.com/find/cruiseDetails.do?voyageCode=R814">See pricing & room details >></a>
         </div>
       </div>
     </div>
