--- a/src/partials/timeline.html
+++ b/src/partials/timeline.html
@@ -45,7 +45,7 @@
 						<div class="row timeline-item">
 							<div class="small-12 columns text-center">
 								<h5>January 2011</h5>
-								<p>Henry asks Caroline to be his girlfriend.</p>
+								<p>Henry asks Caroline to be his girlfriend. </p>
 							</div>
 						</div>
 						<div class="row timeline-item">
@@ -54,8 +54,8 @@
 									<img src="{{root}}assets/img/2011-1.jpg" class="timeline-img">
 								</div>
 								<div class="small-12 medium-6 columns timeline-text align-self-middle">
-									<h5>December 2010</h5>
-									<p>Our first date at a Winter Formal</p>
+									<h5>2011</h5>
+									<p>First time going to the snow together.</p>
 								</div>
 							</div>
 						</div>
@@ -64,8 +64,8 @@
 								<img src="{{root}}assets/img/2011-3.jpg" class="timeline-img">
 							</div>
 							<div class="small-12 medium-6 columns timeline-text align-self-middle">
-								<h5>December 2010</h5>
-								<p>Our first date at a Winter Formal</p>
+								<h5>2011</h5>
+								<p>Spring Break in San Diego.</p>
 							</div>
 						</div>
 					</li>
@@ -74,20 +74,20 @@
 					<li class="orbit-slide timeline-slide">
 						<div class="row timeline-item">
 							<div class="small-12 medium-6 columns timeline-img-container">
-								<img src="{{root}}assets/img/2012-1.jpg" class="timeline-img">
+								<img src="{{root}}assets/img/2012-2.jpg" class="timeline-img">
 							</div>
 							<div class="small-12 medium-6 columns timeline-text align-self-middle">
-								<h5>December 2010</h5>
-								<p>Our first date at a Winter Formal</p>
+								<h5>2012</h5>
+								<p>First Giants game together.</p>
 							</div>
 						</div>
 						<div class="row timeline-item">
 							<div class="small-12 medium-6 columns timeline-img-container">
-								<img src="{{root}}assets/img/2012-2.jpg" class="timeline-img">
+								<img src="{{root}}assets/img/2012-1.jpg" class="timeline-img">
 							</div>
 							<div class="small-12 medium-6 columns timeline-text align-self-middle">
-								<h5>December 2010</h5>
-								<p>Our first date at a Winter Formal</p>
+								<h5>2012</h5>
+								<p>First time going to Yosemite together.</p>
 							</div>
 						</div>
 					</li>
@@ -96,20 +96,20 @@
 					<li class="orbit-slide timeline-slide">
 						<div class="row timeline-item">
 							<div class="small-12 medium-6 columns timeline-img-container">
-								<img src="{{root}}assets/img/2013-1.jpg" class="timeline-img">
+								<img src="{{root}}assets/img/2013-2.jpg" class="timeline-img">
 							</div>
 							<div class="small-12 medium-6 columns timeline-text align-self-middle">
-								<h5>December 2010</h5>
-								<p>Our first date at a Winter Formal</p>
+								<h5>2013</h5>
+								<p>Celebrating our 2 year anniversary in Disneyland!</p>
 							</div>
 						</div>
 						<div class="row timeline-item">
 							<div class="small-12 medium-6 columns timeline-img-container">
-								<img src="{{root}}assets/img/2013-2.jpg" class="timeline-img">
+								<img src="{{root}}assets/img/2013-1.jpg" class="timeline-img">
 							</div>
 							<div class="small-12 medium-6 columns timeline-text align-self-middle">
-								<h5>December 2010</h5>
-								<p>Our first date at a Winter Formal</p>
+								<h5>2013</h5>
+								<p>Henry graduates from SJSU with a BS in Mechanical Engineering.</p>
 							</div>
 						</div>
 					</li>
@@ -121,8 +121,8 @@
 								<img src="{{root}}assets/img/2014-1.jpg" class="timeline-img">
 							</div>
 							<div class="small-12 medium-6 columns timeline-text align-self-middle">
-								<h5>December 2010</h5>
-								<p>Our first date at a Winter Formal</p>
+								<h5>2014</h5>
+								<p>Caroline graduates from SJSU with a BS in Chemical Engineering.</p>
 							</div>
 						</div>
 						<div class="row timeline-item">
@@ -130,8 +130,8 @@
 								<img src="{{root}}assets/img/2014-2.jpg" class="timeline-img">
 							</div>
 							<div class="small-12 medium-6 columns timeline-text align-self-middle">
-								<h5>December 2010</h5>
-								<p>Our first date at a Winter Formal</p>
+								<h5>2014</h5>
+								<p>Enjoying the summer in San Francisco together.</p>
 							</div>
 						</div>
 					</li>
@@ -143,8 +143,8 @@
 								<img src="{{root}}assets/img/2015-1.jpg" class="timeline-img">
 							</div>
 							<div class="small-12 medium-6 columns timeline-text align-self-middle">
-								<h5>December 2010</h5>
-								<p>Our first date at a Winter Formal</p>
+								<h5>2015</h5>
+								<p>New Years Eve in Reno.</p>
 							</div>
 						</div>
 						<div class="row timeline-item">
@@ -152,8 +152,8 @@
 								<img src="{{root}}assets/img/2015-2.jpg" class="timeline-img">
 							</div>
 							<div class="small-12 medium-6 columns timeline-text align-self-middle">
-								<h5>December 2010</h5>
-								<p>Our first date at a Winter Formal</p>
+								<h5>2015</h5>
+								<p>In San Diego.</p>
 							</div>
 						</div>
 					</li>
@@ -165,8 +165,8 @@
 								<img src="{{root}}assets/img/2016-1.jpg" class="timeline-img">
 							</div>
 							<div class="small-12 medium-6 columns timeline-text align-self-middle">
-								<h5>December 2010</h5>
-								<p>Our first date at a Winter Formal</p>
+								<h5>2016</h5>
+								<p>Fall night in San Francisco.</p>
 							</div>
 						</div>
 						<div class="row timeline-item">
@@ -174,8 +174,8 @@
 								<img src="{{root}}assets/img/2016-2.jpg" class="timeline-img">
 							</div>
 							<div class="small-12 medium-6 columns timeline-text align-self-middle">
-								<h5>December 2010</h5>
-								<p>Our first date at a Winter Formal</p>
+								<h5>2016</h5>
+								<p>Enjoying the fall colors in Mammoth Lakes.</p>
 							</div>
 						</div>
 					</li>
@@ -187,8 +187,8 @@
 								<img src="{{root}}assets/img/2017.jpg" class="timeline-img">
 							</div>
 							<div class="small-12 medium-6 columns timeline-text align-self-middle">
-								<h5>December 2010</h5>
-								<p>Our first date at a Winter Formal</p>
+								<h5>January 2017</h5>
+								<p>Henry asks Caroline to be his wife.</p>
 							</div>
 						</div>
 					</li>
