--- a/src/partials/wedding-information.html
+++ b/src/partials/wedding-information.html
@@ -14,6 +14,16 @@
       <p>The ceremony will begin at</p>
       <h5>3:30 PM @ Skywalker's Nightclub</h5>
     </div>
+    <div class="wedding-information-item">
+      <img src="{{root}}assets/img/dinner-icon.png" alt="dinner icon" width="90">
+      <p>There will be a Dinner Reception at</p>
+      <h5>5:30 PM @ Crown Grill</h5>
+    </div>
+    <div class="wedding-information-item">
+      <img src="{{root}}assets/img/drinks-icon.png" alt="drinks icon" width="90">
+      <p>Drinks & Dancing</p>
+      <h5>7:30 PM @ Skywalker's Nightclub</h5>
+    </div>
   </div>
   <p class="lead">More information regarding the Wedding Ceremony and its associated events will be posted closer to the cruise.</p>
 </div>
