change joe's last name

--- a/src/partials/groom-slider.html
+++ b/src/partials/groom-slider.html
@@ -7,7 +7,7 @@
         <div class="column">
           <div class="slider-item">
             <img src="{{root}}assets/img/party-joe.jpg" alt="">
-            <h4 class="slider-name">Joseph Muerto</h4>
+            <h4 class="slider-name">Joseph Merto</h4>
             <h4 class="slider-role">Best Man</h4>
           </div>
         </div>
