update mobile slider

--- a/src/partials/groom-slider.html
+++ b/src/partials/groom-slider.html
@@ -59,7 +59,7 @@
     <li class="is-active orbit-slide">
       <div class="slider-item">
         <img src="{{root}}assets/img/party-joe.jpg" alt="">
-        <h4 class="slider-name">Joseph Muerto</h4>
+        <h4 class="slider-name">Joseph Merto</h4>
         <h4 class="slider-role">Best Man</h4>
       </div>
     </li>
@@ -88,7 +88,7 @@
       <div class="slider-item">
         <img src="{{root}}assets/img/party-stacey.jpg" alt="">
         <h4 class="slider-name">Stacey Martin</h4>
-        <h4 class="slider-role">Groomsman</h4>
+        <h4 class="slider-role">Groomsmaid</h4>
       </div>
     </li>
   </ul>
